Compiler Optimization/Flex-Bison/finalAssignment.output
Terminals which are not used

   T_OPENKEY
   T_CLOSEKEY
   T_RESHAPE


State 66 conflicts: 2 shift/reduce


Grammar

    0 $accept: start_program $end

    1 start_program: prog

    2 prog: T_PROGRAM T_ID opt_decls T_BEGIN opt_stmts T_END

    3 opt_decls: decl_lst
    4          | /* empty */

    5 decl_lst: decl T_SEMICOL decl_lst
    6         | decl T_SEMICOL
    7         | decl

    8 decl: type T_COLON id_list
    9     | tensor_decl

   10 id_list: T_ID T_COMMA id_list
   11        | T_ID

   12 type: T_INT
   13     | T_FLT
   14     | T_TENSOR

   15 tensor_decl: T_TENSOR T_ID T_OPENBRACK tensor_dims T_CLOSEBRACK

   16 tensor_dims: T_INTEGER T_COMMA tensor_dims
   17            | T_INTEGER

   18 stmt: T_ID T_ASSOP expr
   19     | T_ID T_ASSOP tensor_op
   20     | T_DOIF T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK
   21     | T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK
   22     | T_DOWHILE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK
   23     | T_DOUNTIL T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK
   24     | T_PRINT expr
   25     | T_READ T_ID

   26 opt_stmts: stmt_lst
   27          | /* empty */

   28 stmt_lst: stmt T_SEMICOL stmt_lst
   29         | stmt T_SEMICOL

   30 expr: expr T_PLUSOP term
   31     | expr T_MINUSOP term
   32     | term

   33 term: term T_MULTOP factor
   34     | term T_DIVOP factor
   35     | term T_MODOP factor
   36     | term T_POWOP factor
   37     | factor

   38 factor: T_OPENPAR expr T_CLOSEPAR
   39       | T_ID
   40       | T_FLOAT
   41       | T_INTEGER

   42 expression: expr T_LESSOP expr
   43           | expr T_MOREOP expr
   44           | expr T_LESSOEQOP expr
   45           | expr T_MOREOEQOP expr
   46           | expr T_EQSYM expr

   47 tensor_op: T_ID T_MATMUL T_ID
   48          | T_ID T_PLUSOP T_ID
   49          | T_ID T_MULTOP T_ID
   50          | T_TRANSPOSE T_OPENPAR T_ID T_CLOSEPAR
   51          | T_REDUCE T_OPENPAR T_ID T_COMMA T_INTEGER T_CLOSEPAR


Terminals, with rules where they appear

$end (0) 0
error (256)
T_COMMA (258) 10 16 51
T_SEMICOL (259) 5 6 28 29
T_OPENKEY (260)
T_CLOSEKEY (261)
T_OPENBRACK (262) 15 20 21 22 23
T_CLOSEBRACK (263) 15 20 21 22 23
T_OPENPAR (264) 20 21 22 23 38 50 51
T_CLOSEPAR (265) 20 21 22 23 38 50 51
T_PLUSOP (266) 30 48
T_MULTOP (267) 33 49
T_MINUSOP (268) 31
T_DIVOP (269) 34
T_ASSOP (270) 18 19
T_EQSYM (271) 46
T_LESSOP (272) 42
T_MOREOP (273) 43
T_LESSOEQOP (274) 44
T_MOREOEQOP (275) 45
T_MODOP (276) 35
T_POWOP (277) 36
T_COLON (278) 8
T_READ (279) 25
T_PRINT (280) 24
T_DOIF (281) 20
T_DOIFELSE (282) 21
T_DOWHILE (283) 22
T_DOUNTIL (284) 23
T_PROGRAM (285) 2
T_BEGIN (286) 2
T_END (287) 2
T_INT (288) 12
T_FLT (289) 13
T_TENSOR (290) 14 15
T_MATMUL (291) 47
T_TRANSPOSE (292) 50
T_REDUCE (293) 51
T_RESHAPE (294)
T_ID (295) 2 10 11 15 18 19 25 39 47 48 49 50 51
T_INTEGER (296) 16 17 41 51
T_FLOAT (297) 40


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
start_program (44)
    on left: 1, on right: 0
prog (45)
    on left: 2, on right: 1
opt_decls (46)
    on left: 3 4, on right: 2
decl_lst (47)
    on left: 5 6 7, on right: 3 5
decl (48)
    on left: 8 9, on right: 5 6 7
id_list (49)
    on left: 10 11, on right: 8 10
type (50)
    on left: 12 13 14, on right: 8
tensor_decl (51)
    on left: 15, on right: 9
tensor_dims (52)
    on left: 16 17, on right: 15 16
stmt (53)
    on left: 18 19 20 21 22 23 24 25, on right: 28 29
opt_stmts (54)
    on left: 26 27, on right: 2 20 21 22 23
stmt_lst (55)
    on left: 28 29, on right: 26 28
expr (56)
    on left: 30 31 32, on right: 18 24 30 31 38 42 43 44 45 46
term (57)
    on left: 33 34 35 36 37, on right: 30 31 32 33 34 35 36
factor (58)
    on left: 38 39 40 41, on right: 33 34 35 36 37
expression (59)
    on left: 42 43 44 45 46, on right: 20 21 22 23
tensor_op (60)
    on left: 47 48 49 50 51, on right: 19


state 0

    0 $accept: . start_program $end

    T_PROGRAM  shift, and go to state 1

    start_program  go to state 2
    prog           go to state 3


state 1

    2 prog: T_PROGRAM . T_ID opt_decls T_BEGIN opt_stmts T_END

    T_ID  shift, and go to state 4


state 2

    0 $accept: start_program . $end

    $end  shift, and go to state 5


state 3

    1 start_program: prog .

    $default  reduce using rule 1 (start_program)


state 4

    2 prog: T_PROGRAM T_ID . opt_decls T_BEGIN opt_stmts T_END

    T_INT     shift, and go to state 6
    T_FLT     shift, and go to state 7
    T_TENSOR  shift, and go to state 8

    $default  reduce using rule 4 (opt_decls)

    opt_decls    go to state 9
    decl_lst     go to state 10
    decl         go to state 11
    type         go to state 12
    tensor_decl  go to state 13


state 5

    0 $accept: start_program $end .

    $default  accept


state 6

   12 type: T_INT .

    $default  reduce using rule 12 (type)


state 7

   13 type: T_FLT .

    $default  reduce using rule 13 (type)


state 8

   14 type: T_TENSOR .
   15 tensor_decl: T_TENSOR . T_ID T_OPENBRACK tensor_dims T_CLOSEBRACK

    T_ID  shift, and go to state 14

    $default  reduce using rule 14 (type)


state 9

    2 prog: T_PROGRAM T_ID opt_decls . T_BEGIN opt_stmts T_END

    T_BEGIN  shift, and go to state 15


state 10

    3 opt_decls: decl_lst .

    $default  reduce using rule 3 (opt_decls)


state 11

    5 decl_lst: decl . T_SEMICOL decl_lst
    6         | decl . T_SEMICOL
    7         | decl .

    T_SEMICOL  shift, and go to state 16

    $default  reduce using rule 7 (decl_lst)


state 12

    8 decl: type . T_COLON id_list

    T_COLON  shift, and go to state 17


state 13

    9 decl: tensor_decl .

    $default  reduce using rule 9 (decl)


state 14

   15 tensor_decl: T_TENSOR T_ID . T_OPENBRACK tensor_dims T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 18


state 15

    2 prog: T_PROGRAM T_ID opt_decls T_BEGIN . opt_stmts T_END

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 27
    stmt_lst   go to state 28


state 16

    5 decl_lst: decl T_SEMICOL . decl_lst
    6         | decl T_SEMICOL .

    T_INT     shift, and go to state 6
    T_FLT     shift, and go to state 7
    T_TENSOR  shift, and go to state 8

    $default  reduce using rule 6 (decl_lst)

    decl_lst     go to state 29
    decl         go to state 11
    type         go to state 12
    tensor_decl  go to state 13


state 17

    8 decl: type T_COLON . id_list

    T_ID  shift, and go to state 30

    id_list  go to state 31


state 18

   15 tensor_decl: T_TENSOR T_ID T_OPENBRACK . tensor_dims T_CLOSEBRACK

    T_INTEGER  shift, and go to state 32

    tensor_dims  go to state 33


state 19

   25 stmt: T_READ . T_ID

    T_ID  shift, and go to state 34


state 20

   24 stmt: T_PRINT . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 39
    term    go to state 40
    factor  go to state 41


state 21

   20 stmt: T_DOIF . T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 42


state 22

   21 stmt: T_DOIFELSE . T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 43


state 23

   22 stmt: T_DOWHILE . T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 44


state 24

   23 stmt: T_DOUNTIL . T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 45


state 25

   18 stmt: T_ID . T_ASSOP expr
   19     | T_ID . T_ASSOP tensor_op

    T_ASSOP  shift, and go to state 46


state 26

   28 stmt_lst: stmt . T_SEMICOL stmt_lst
   29         | stmt . T_SEMICOL

    T_SEMICOL  shift, and go to state 47


state 27

    2 prog: T_PROGRAM T_ID opt_decls T_BEGIN opt_stmts . T_END

    T_END  shift, and go to state 48


state 28

   26 opt_stmts: stmt_lst .

    $default  reduce using rule 26 (opt_stmts)


state 29

    5 decl_lst: decl T_SEMICOL decl_lst .

    $default  reduce using rule 5 (decl_lst)


state 30

   10 id_list: T_ID . T_COMMA id_list
   11        | T_ID .

    T_COMMA  shift, and go to state 49

    $default  reduce using rule 11 (id_list)


state 31

    8 decl: type T_COLON id_list .

    $default  reduce using rule 8 (decl)


state 32

   16 tensor_dims: T_INTEGER . T_COMMA tensor_dims
   17            | T_INTEGER .

    T_COMMA  shift, and go to state 50

    $default  reduce using rule 17 (tensor_dims)


state 33

   15 tensor_decl: T_TENSOR T_ID T_OPENBRACK tensor_dims . T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 51


state 34

   25 stmt: T_READ T_ID .

    $default  reduce using rule 25 (stmt)


state 35

   38 factor: T_OPENPAR . expr T_CLOSEPAR

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 52
    term    go to state 40
    factor  go to state 41


state 36

   39 factor: T_ID .

    $default  reduce using rule 39 (factor)


state 37

   41 factor: T_INTEGER .

    $default  reduce using rule 41 (factor)


state 38

   40 factor: T_FLOAT .

    $default  reduce using rule 40 (factor)


state 39

   24 stmt: T_PRINT expr .
   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 24 (stmt)


state 40

   32 expr: term .
   33 term: term . T_MULTOP factor
   34     | term . T_DIVOP factor
   35     | term . T_MODOP factor
   36     | term . T_POWOP factor

    T_MULTOP  shift, and go to state 55
    T_DIVOP   shift, and go to state 56
    T_MODOP   shift, and go to state 57
    T_POWOP   shift, and go to state 58

    $default  reduce using rule 32 (expr)


state 41

   37 term: factor .

    $default  reduce using rule 37 (term)


state 42

   20 stmt: T_DOIF T_OPENPAR . expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr        go to state 59
    term        go to state 40
    factor      go to state 41
    expression  go to state 60


state 43

   21 stmt: T_DOIFELSE T_OPENPAR . expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr        go to state 59
    term        go to state 40
    factor      go to state 41
    expression  go to state 61


state 44

   22 stmt: T_DOWHILE T_OPENPAR . expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr        go to state 59
    term        go to state 40
    factor      go to state 41
    expression  go to state 62


state 45

   23 stmt: T_DOUNTIL T_OPENPAR . expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr        go to state 59
    term        go to state 40
    factor      go to state 41
    expression  go to state 63


state 46

   18 stmt: T_ID T_ASSOP . expr
   19     | T_ID T_ASSOP . tensor_op

    T_OPENPAR    shift, and go to state 35
    T_TRANSPOSE  shift, and go to state 64
    T_REDUCE     shift, and go to state 65
    T_ID         shift, and go to state 66
    T_INTEGER    shift, and go to state 37
    T_FLOAT      shift, and go to state 38

    expr       go to state 67
    term       go to state 40
    factor     go to state 41
    tensor_op  go to state 68


state 47

   28 stmt_lst: stmt T_SEMICOL . stmt_lst
   29         | stmt T_SEMICOL .

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 29 (stmt_lst)

    stmt      go to state 26
    stmt_lst  go to state 69


state 48

    2 prog: T_PROGRAM T_ID opt_decls T_BEGIN opt_stmts T_END .

    $default  reduce using rule 2 (prog)


state 49

   10 id_list: T_ID T_COMMA . id_list

    T_ID  shift, and go to state 30

    id_list  go to state 70


state 50

   16 tensor_dims: T_INTEGER T_COMMA . tensor_dims

    T_INTEGER  shift, and go to state 32

    tensor_dims  go to state 71


state 51

   15 tensor_decl: T_TENSOR T_ID T_OPENBRACK tensor_dims T_CLOSEBRACK .

    $default  reduce using rule 15 (tensor_decl)


state 52

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   38 factor: T_OPENPAR expr . T_CLOSEPAR

    T_CLOSEPAR  shift, and go to state 72
    T_PLUSOP    shift, and go to state 53
    T_MINUSOP   shift, and go to state 54


state 53

   30 expr: expr T_PLUSOP . term

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    term    go to state 73
    factor  go to state 41


state 54

   31 expr: expr T_MINUSOP . term

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    term    go to state 74
    factor  go to state 41


state 55

   33 term: term T_MULTOP . factor

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    factor  go to state 75


state 56

   34 term: term T_DIVOP . factor

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    factor  go to state 76


state 57

   35 term: term T_MODOP . factor

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    factor  go to state 77


state 58

   36 term: term T_POWOP . factor

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    factor  go to state 78


state 59

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   42 expression: expr . T_LESSOP expr
   43           | expr . T_MOREOP expr
   44           | expr . T_LESSOEQOP expr
   45           | expr . T_MOREOEQOP expr
   46           | expr . T_EQSYM expr

    T_PLUSOP     shift, and go to state 53
    T_MINUSOP    shift, and go to state 54
    T_EQSYM      shift, and go to state 79
    T_LESSOP     shift, and go to state 80
    T_MOREOP     shift, and go to state 81
    T_LESSOEQOP  shift, and go to state 82
    T_MOREOEQOP  shift, and go to state 83


state 60

   20 stmt: T_DOIF T_OPENPAR expression . T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_CLOSEPAR  shift, and go to state 84


state 61

   21 stmt: T_DOIFELSE T_OPENPAR expression . T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_CLOSEPAR  shift, and go to state 85


state 62

   22 stmt: T_DOWHILE T_OPENPAR expression . T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_CLOSEPAR  shift, and go to state 86


state 63

   23 stmt: T_DOUNTIL T_OPENPAR expression . T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_CLOSEPAR  shift, and go to state 87


state 64

   50 tensor_op: T_TRANSPOSE . T_OPENPAR T_ID T_CLOSEPAR

    T_OPENPAR  shift, and go to state 88


state 65

   51 tensor_op: T_REDUCE . T_OPENPAR T_ID T_COMMA T_INTEGER T_CLOSEPAR

    T_OPENPAR  shift, and go to state 89


state 66

   39 factor: T_ID .
   47 tensor_op: T_ID . T_MATMUL T_ID
   48          | T_ID . T_PLUSOP T_ID
   49          | T_ID . T_MULTOP T_ID

    T_PLUSOP  shift, and go to state 90
    T_MULTOP  shift, and go to state 91
    T_MATMUL  shift, and go to state 92

    T_PLUSOP  [reduce using rule 39 (factor)]
    T_MULTOP  [reduce using rule 39 (factor)]
    $default  reduce using rule 39 (factor)


state 67

   18 stmt: T_ID T_ASSOP expr .
   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 18 (stmt)


state 68

   19 stmt: T_ID T_ASSOP tensor_op .

    $default  reduce using rule 19 (stmt)


state 69

   28 stmt_lst: stmt T_SEMICOL stmt_lst .

    $default  reduce using rule 28 (stmt_lst)


state 70

   10 id_list: T_ID T_COMMA id_list .

    $default  reduce using rule 10 (id_list)


state 71

   16 tensor_dims: T_INTEGER T_COMMA tensor_dims .

    $default  reduce using rule 16 (tensor_dims)


state 72

   38 factor: T_OPENPAR expr T_CLOSEPAR .

    $default  reduce using rule 38 (factor)


state 73

   30 expr: expr T_PLUSOP term .
   33 term: term . T_MULTOP factor
   34     | term . T_DIVOP factor
   35     | term . T_MODOP factor
   36     | term . T_POWOP factor

    T_MULTOP  shift, and go to state 55
    T_DIVOP   shift, and go to state 56
    T_MODOP   shift, and go to state 57
    T_POWOP   shift, and go to state 58

    $default  reduce using rule 30 (expr)


state 74

   31 expr: expr T_MINUSOP term .
   33 term: term . T_MULTOP factor
   34     | term . T_DIVOP factor
   35     | term . T_MODOP factor
   36     | term . T_POWOP factor

    T_MULTOP  shift, and go to state 55
    T_DIVOP   shift, and go to state 56
    T_MODOP   shift, and go to state 57
    T_POWOP   shift, and go to state 58

    $default  reduce using rule 31 (expr)


state 75

   33 term: term T_MULTOP factor .

    $default  reduce using rule 33 (term)


state 76

   34 term: term T_DIVOP factor .

    $default  reduce using rule 34 (term)


state 77

   35 term: term T_MODOP factor .

    $default  reduce using rule 35 (term)


state 78

   36 term: term T_POWOP factor .

    $default  reduce using rule 36 (term)


state 79

   46 expression: expr T_EQSYM . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 93
    term    go to state 40
    factor  go to state 41


state 80

   42 expression: expr T_LESSOP . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 94
    term    go to state 40
    factor  go to state 41


state 81

   43 expression: expr T_MOREOP . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 95
    term    go to state 40
    factor  go to state 41


state 82

   44 expression: expr T_LESSOEQOP . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 96
    term    go to state 40
    factor  go to state 41


state 83

   45 expression: expr T_MOREOEQOP . expr

    T_OPENPAR  shift, and go to state 35
    T_ID       shift, and go to state 36
    T_INTEGER  shift, and go to state 37
    T_FLOAT    shift, and go to state 38

    expr    go to state 97
    term    go to state 40
    factor  go to state 41


state 84

   20 stmt: T_DOIF T_OPENPAR expression T_CLOSEPAR . T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 98


state 85

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR . T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 99


state 86

   22 stmt: T_DOWHILE T_OPENPAR expression T_CLOSEPAR . T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 100


state 87

   23 stmt: T_DOUNTIL T_OPENPAR expression T_CLOSEPAR . T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 101


state 88

   50 tensor_op: T_TRANSPOSE T_OPENPAR . T_ID T_CLOSEPAR

    T_ID  shift, and go to state 102


state 89

   51 tensor_op: T_REDUCE T_OPENPAR . T_ID T_COMMA T_INTEGER T_CLOSEPAR

    T_ID  shift, and go to state 103


state 90

   48 tensor_op: T_ID T_PLUSOP . T_ID

    T_ID  shift, and go to state 104


state 91

   49 tensor_op: T_ID T_MULTOP . T_ID

    T_ID  shift, and go to state 105


state 92

   47 tensor_op: T_ID T_MATMUL . T_ID

    T_ID  shift, and go to state 106


state 93

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   46 expression: expr T_EQSYM expr .

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 46 (expression)


state 94

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   42 expression: expr T_LESSOP expr .

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 42 (expression)


state 95

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   43 expression: expr T_MOREOP expr .

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 43 (expression)


state 96

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   44 expression: expr T_LESSOEQOP expr .

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 44 (expression)


state 97

   30 expr: expr . T_PLUSOP term
   31     | expr . T_MINUSOP term
   45 expression: expr T_MOREOEQOP expr .

    T_PLUSOP   shift, and go to state 53
    T_MINUSOP  shift, and go to state 54

    $default  reduce using rule 45 (expression)


state 98

   20 stmt: T_DOIF T_OPENPAR expression T_CLOSEPAR T_OPENBRACK . opt_stmts T_CLOSEBRACK

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 107
    stmt_lst   go to state 28


state 99

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK . opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 108
    stmt_lst   go to state 28


state 100

   22 stmt: T_DOWHILE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK . opt_stmts T_CLOSEBRACK

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 109
    stmt_lst   go to state 28


state 101

   23 stmt: T_DOUNTIL T_OPENPAR expression T_CLOSEPAR T_OPENBRACK . opt_stmts T_CLOSEBRACK

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 110
    stmt_lst   go to state 28


state 102

   50 tensor_op: T_TRANSPOSE T_OPENPAR T_ID . T_CLOSEPAR

    T_CLOSEPAR  shift, and go to state 111


state 103

   51 tensor_op: T_REDUCE T_OPENPAR T_ID . T_COMMA T_INTEGER T_CLOSEPAR

    T_COMMA  shift, and go to state 112


state 104

   48 tensor_op: T_ID T_PLUSOP T_ID .

    $default  reduce using rule 48 (tensor_op)


state 105

   49 tensor_op: T_ID T_MULTOP T_ID .

    $default  reduce using rule 49 (tensor_op)


state 106

   47 tensor_op: T_ID T_MATMUL T_ID .

    $default  reduce using rule 47 (tensor_op)


state 107

   20 stmt: T_DOIF T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts . T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 113


state 108

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts . T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 114


state 109

   22 stmt: T_DOWHILE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts . T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 115


state 110

   23 stmt: T_DOUNTIL T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts . T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 116


state 111

   50 tensor_op: T_TRANSPOSE T_OPENPAR T_ID T_CLOSEPAR .

    $default  reduce using rule 50 (tensor_op)


state 112

   51 tensor_op: T_REDUCE T_OPENPAR T_ID T_COMMA . T_INTEGER T_CLOSEPAR

    T_INTEGER  shift, and go to state 117


state 113

   20 stmt: T_DOIF T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK .

    $default  reduce using rule 20 (stmt)


state 114

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK . T_OPENBRACK opt_stmts T_CLOSEBRACK

    T_OPENBRACK  shift, and go to state 118


state 115

   22 stmt: T_DOWHILE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK .

    $default  reduce using rule 22 (stmt)


state 116

   23 stmt: T_DOUNTIL T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK .

    $default  reduce using rule 23 (stmt)


state 117

   51 tensor_op: T_REDUCE T_OPENPAR T_ID T_COMMA T_INTEGER . T_CLOSEPAR

    T_CLOSEPAR  shift, and go to state 119


state 118

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK . opt_stmts T_CLOSEBRACK

    T_READ      shift, and go to state 19
    T_PRINT     shift, and go to state 20
    T_DOIF      shift, and go to state 21
    T_DOIFELSE  shift, and go to state 22
    T_DOWHILE   shift, and go to state 23
    T_DOUNTIL   shift, and go to state 24
    T_ID        shift, and go to state 25

    $default  reduce using rule 27 (opt_stmts)

    stmt       go to state 26
    opt_stmts  go to state 120
    stmt_lst   go to state 28


state 119

   51 tensor_op: T_REDUCE T_OPENPAR T_ID T_COMMA T_INTEGER T_CLOSEPAR .

    $default  reduce using rule 51 (tensor_op)


state 120

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts . T_CLOSEBRACK

    T_CLOSEBRACK  shift, and go to state 121


state 121

   21 stmt: T_DOIFELSE T_OPENPAR expression T_CLOSEPAR T_OPENBRACK opt_stmts T_CLOSEBRACK T_OPENBRACK opt_stmts T_CLOSEBRACK .

    $default  reduce using rule 21 (stmt)
